# processor

./: Cargo.toml  Dockerfile  Dockerfile.benchmark  README.md  docker-compose.yml  sample-message.json  sample-payload.xml  sample-workflow.json
benchmark/: bench.py  requirements.txt
core-data/: Cargo.toml
core-data/examples/: pacs008_001_07_cct_outgoing.xml  usage.rs
core-data/src/models/: message.rs  mod.rs  task.rs  workflow.rs
core-data/src/models/message/: auditlog.rs  core.rs  enrich.rs  errors.rs  execute.rs  fetch.rs  iso20022.rs  logic.rs  mod.rs  parse.rs  payload.rs  progress.rs
core-data/tests/: message-test.rs  workflow-test.rs
processor/: Cargo.toml  config.yml
processor-api/: Cargo.toml  config.yml
processor-api/src/: initiate.rs  main.rs
processor-api/src/config/: config.rs
processor/src/: main.rs  processor.rs
processor/src/config/: config.rs
