[package]
name = "core-data"
version = "0.1.0"
edition = "2021"
exclude = ["/xsd", "/xml", ".DS_Store", "/target", ".vscode", "generate.sh"]
authors = ["Harishankar Narayanan <nharishankar@gmail.com>"]
license = "Apache-2.0"
description = "Open Payments - Core Data Library"
readme = "README.md"
homepage = "https://github.com/Open-Payments/processor"
repository = "https://github.com/Open-Payments/processor"
keywords = ["financial", "payments", "message", "iso20022", "processor"]
categories = ["data-structures", "development-tools", "finance", "parsing", "parser-implementations"]

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde-xml-rs = "0.6"
time = { version = "0.3.37", features = ["serde", "formatting", "parsing"] }
sonyflake = "0.3"
datalogic-rs = "1.0.10"
open-payments-common = { version = "1.0.9" }
open-payments-iso20022 = { version = "1.0.9", features = ["payments", "derive_serde"] }
serde_path_to_error = "0.1"
quick-xml = { version = "0.31", features = ["serialize"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11", features = ["v4"] }
