[package]
name = "open-payments-processor-api"
version = "0.1.0"
edition = "2021"
exclude = ["/xsd", "/xml", ".DS_Store", "/target", ".vscode", "generate.sh"]
authors = ["Harishankar Narayanan <nharishankar@gmail.com>"]
license = "Apache-2.0"
description = "Open Payments - Payment Processor API"
readme = "../README.md"
homepage = "https://github.com/Open-Payments/processor"
repository = "https://github.com/Open-Payments/processor"
keywords = ["financial", "payments", "message", "iso20022", "processor"]
categories = ["data-structures", "development-tools", "finance", "parsing", "parser-implementations"]

[dependencies]
actix-web = "4.9"
actix-files = "0.6"
core-data = { path = "../core-data" }
rdkafka = { version = "0.37", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
config = "0.14"
bincode = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11", features = ["v4"] }
chrono = "0.4"
lazy_static = "1.5"
