[package]
name = "open-payments-processor"
version = "0.1.0"
edition = "2021"
exclude = ["/xsd", "/xml", ".DS_Store", "/target", ".vscode", "generate.sh"]
authors = ["Harishankar Narayanan <nharishankar@gmail.com>"]
license = "Apache-2.0"
description = "Open Payments - Payment Processor"
readme = "../README.md"
homepage = "https://github.com/Open-Payments/processor"
repository = "https://github.com/Open-Payments/processor"
keywords = ["financial", "payments", "message", "iso20022", "processor"]
categories = ["data-structures", "development-tools", "finance", "parsing", "parser-implementations"]

[dependencies]
core-data = { path = "../core-data" }
rdkafka = { version = "0.37", features = ["tokio"] }
tokio = { version = "1.42", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
open-payments-common = { version = "1.0.9" }
open-payments-iso20022 = { version = "1.0.9", features = ["payments", "derive_serde"] }
quick-xml = { version = "0.37", features = ["serialize"] }
serde_json = "1.0"
config = "0.14"
mongodb = "2.8"
regex = "1.11.1"
